--- a/src/dev/styles/base/_variable.scss
+++ b/src/dev/styles/base/_variable.scss
@@ -16,6 +16,7 @@ $ff_en: 'PT Sans', sans-serif;
 $base_light: #fff;
 $base_dark: #999;
 $base_light_dark: #444;
+$base_black: #111;
 
 // font-color
 $font_base_color: $base_light;
@@ -23,7 +24,7 @@ $font_sub_color: $base_dark;
 $font_sub_dark_color: $base_light_dark;
 
 // background-color
-$background_base_color: #111;
+$background_base_color: $base_black;
 $background_light_color: $base_light;
 
 // border-color
