--- a/src/dev/styles/base/_variable.scss
+++ b/src/dev/styles/base/_variable.scss
@@ -16,6 +16,7 @@ $ff_en: 'PT Sans', sans-serif;
 $base_light: #fff;
 $base_dark: #999;
 $base_light_dark: #444;
+$base_light_dark2: #222;
 $base_black: #111;
 
 // font-color
@@ -26,6 +27,7 @@ $font_sub_dark_color: $base_light_dark;
 // background-color
 $background_base_color: $base_black;
 $background_light_color: $base_light;
+$background_light_dark_color: $base_light_dark2;
 
 // border-color
 $border_base_color: $base_light;
