--- a/src/dev/styles/common/_index.scss
+++ b/src/dev/styles/common/_index.scss
@@ -4,6 +4,8 @@
 @use './list';
 @use './box';
 @use './utility';
-@use './contact';
+@use './cta';
 @use './header';
 @use './other';
+@use './mv';
+@use './heading';
