feat : サイトのガワの部分設計

--- a/app/public/wp-content/themes/SUISYOU/common/styles/index.css
+++ b/app/public/wp-content/themes/SUISYOU/common/styles/index.css
@@ -489,60 +489,63 @@ button {
     grid-area: grid06;
   }
 }
-.m-header {
+.l-header {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 99;
   width: 100vw;
 }
+.l-header.is-active {
+  z-index: 101;
+}
 
-.m-header__inner {
+.l-header__inner {
   padding: 60px 40px 0;
   max-width: 1200px;
   box-sizing: content-box;
   margin-inline: auto;
 }
 @media screen and (min-width: 769px) {
-  .m-header__inner {
+  .l-header__inner {
     padding: 80px 80px 0;
   }
 }
 
-.m-header__layout {
+.l-header__layout {
   display: flex;
   justify-content: space-between;
 }
 
-.m-header__media {
+.l-header__media {
   width: 50%;
   display: none;
 }
 @media screen and (min-width: 769px) {
-  .m-header__media {
+  .l-header__media {
     display: block;
   }
 }
-.m-header__media :where(img) {
+.l-header__media :where(img) {
   border-radius: 10px;
 }
 
-.m-header__logo,
-.m-header__infoLogo {
+.l-header__logo,
+.l-header__infoLogo {
   width: 70px;
 }
 @media screen and (min-width: 769px) {
-  .m-header__logo,
-  .m-header__infoLogo {
+  .l-header__logo,
+  .l-header__infoLogo {
     width: 125px;
   }
 }
-.m-header__logo :where(img),
-.m-header__infoLogo :where(img) {
+.l-header__logo :where(img),
+.l-header__infoLogo :where(img) {
   vertical-align: bottom;
 }
 
-.m-header__contents {
+.l-header__contents {
   display: none;
   position: absolute;
   width: 100vw;
@@ -551,11 +554,11 @@ button {
   background-color: #111;
   height: 100vh;
 }
-.is-active .m-header__contents {
+.is-active .l-header__contents {
   display: block;
 }
 
-.m-header__contentsInner {
+.l-header__contentsInner {
   display: flex;
   -moz-column-gap: 5%;
        column-gap: 5%;
@@ -563,12 +566,12 @@ button {
   margin-inline: auto;
 }
 @media screen and (min-width: 769px) {
-  .m-header__contentsInner {
+  .l-header__contentsInner {
     padding: 80px 80px 0;
   }
 }
 
-.m-header__button {
+.l-header__button {
   position: relative;
   background-color: inherit;
   border: none;
@@ -581,70 +584,70 @@ button {
   z-index: 1;
 }
 @media screen and (min-width: 769px) {
-  .m-header__button {
+  .l-header__button {
     width: 56px;
     height: 50px;
   }
 }
-.is-active .m-header__button {
+.is-active .l-header__button {
   background-image: url("../../common/img/icon_common_10.svg");
 }
 
-.m-header__buttonText {
+.l-header__buttonText {
   display: inline-block;
   padding-top: 23px;
 }
 
-.m-header__infoInner {
+.l-header__infoInner {
   display: flex;
   -moz-column-gap: 50px;
        column-gap: 50px;
   align-items: center;
 }
 
-.m-header__info {
+.l-header__info {
   width: 100%;
 }
 @media screen and (min-width: 769px) {
-  .m-header__info {
+  .l-header__info {
     width: 50%;
   }
 }
 
-.m-header__info {
+.l-header__info {
   width: 100%;
 }
 @media screen and (min-width: 769px) {
-  .m-header__info {
+  .l-header__info {
     width: 50%;
   }
 }
 
-.m-header__list {
+.l-header__list {
   display: none;
   -moz-column-gap: 25px;
        column-gap: 25px;
   align-items: center;
 }
 @media screen and (min-width: 769px) {
-  .m-header__list {
+  .l-header__list {
     display: flex;
   }
 }
 
-.m-header__link {
+.l-header__link {
   width: 20px;
 }
 
 @media screen and (min-width: 769px) {
-  .m-header__nav {
+  .l-header__nav {
     position: relative;
     height: 100%;
     width: 100%;
   }
 }
 
-.m-header__navList {
+.l-header__navList {
   display: flex;
   width: 100%;
   margin-top: 100px;
@@ -652,7 +655,7 @@ button {
   flex-direction: column;
 }
 @media screen and (min-width: 769px) {
-  .m-header__navList {
+  .l-header__navList {
     position: absolute;
     top: 22%;
     gap: 40px;
@@ -661,42 +664,42 @@ button {
   }
 }
 
-.m-header__navRight,
-.m-header__navLeft {
+.l-header__navRight,
+.l-header__navLeft {
   display: flex;
   flex-direction: column;
   gap: 36px;
 }
 @media screen and (min-width: 769px) {
-  .m-header__navRight,
-  .m-header__navLeft {
+  .l-header__navRight,
+  .l-header__navLeft {
     width: calc((100% - 36px) / 2);
   }
 }
 
-.m-header__navItem {
+.l-header__navItem {
   display: flex;
   flex-direction: column;
 }
 
-.m-header__navLink {
+.l-header__navLink {
   display: flex;
   flex-direction: column;
   text-decoration: none;
 }
 
-.m-header__navText {
+.l-header__navText {
   color: #fff;
   font-size: calc(16 / 16 * 1rem);
   line-height: 1.4;
 }
 @media screen and (min-width: 769px) {
-  .m-header__navText {
+  .l-header__navText {
     font-size: calc(22 / 16 * 1rem);
   }
 }
 
-.m-header__navSubText {
+.l-header__navSubText {
   color: #999;
   font-size: calc(12 / 16 * 1rem);
   line-height: 1.4;
@@ -711,10 +714,16 @@ button {
 
 .m-mv {
   position: relative;
-  z-index: 1000;
+  z-index: 100;
   max-width: 916px;
   margin-inline: auto;
   box-sizing: content-box;
+  width: calc(100% - 70px - 40px - 100px);
+}
+@media screen and (min-width: 769px) {
+  .m-mv {
+    width: calc(100% - 125px - 56px - 220px);
+  }
 }
 
 .m-mv__inner {
@@ -730,11 +739,11 @@ button {
 }
 
 .m-mv__heading {
-  padding: 60px 124px 0;
+  padding: 60px 0 0;
 }
 @media screen and (min-width: 769px) {
   .m-mv__heading {
-    padding: 80px 220px 0;
+    padding: 80px 0 0;
   }
 }
 
@@ -759,7 +768,8 @@ button {
 }
 
 .m-mv__text {
-  margin-top: 64px;
+  margin: 64px calc(50% - 50vw) 0;
+  width: 100vw;
   text-align: center;
   padding: 0 40px;
 }
@@ -787,6 +797,158 @@ button {
     font-size: calc(28 / 16 * 1rem);
     text-align: center;
   }
+}
+
+.l-footer {
+  background-color: #111;
+  padding: 80px 40px 120px;
+  box-sizing: content-box;
+}
+@media screen and (min-width: 769px) {
+  .l-footer {
+    padding: 128px 80px 180px;
+  }
+}
+
+.l-footer__inner {
+  max-width: 600px;
+  margin-inline: auto;
+}
+
+.l-footer__logoLink {
+  width: 70px;
+  display: block;
+  margin-inline: auto;
+}
+@media screen and (min-width: 769px) {
+  .l-footer__logoLink {
+    width: 125px;
+  }
+}
+
+.l-footer__sns {
+  margin-top: 40px;
+  display: flex;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-inline: auto;
+  gap: 24px;
+}
+@media screen and (min-width: 769px) {
+  .l-footer__sns {
+    width: 50px;
+  }
+}
+
+.l-footer__snsItem {
+  width: 20px;
+  flex-shrink: 0;
+}
+
+.l-footer__nav {
+  margin-top: 36px;
+}
+@media screen and (min-width: 769px) {
+  .l-footer__nav {
+    margin-top: 40px;
+  }
+}
+
+.l-footer__navList {
+  display: grid;
+  gap: 8px;
+}
+@media screen and (min-width: 769px) {
+  .l-footer__navList {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas: "gridItem01 gridItem04 gridItem06" "gridItem02 gridItem05 gridItem07" "gridItem03 . .";
+    gap: 18px 24px;
+  }
+}
+
+.l-footer__navItem {
+  text-align: center;
+}
+@media screen and (min-width: 769px) {
+  .l-footer__navItem {
+    text-align: left;
+  }
+}
+
+.l-footer__navLink {
+  display: inline-block;
+  height: 100%;
+  padding: 0 8px;
+}
+
+@media screen and (min-width: 769px) {
+  .gridItem01 {
+    grid-area: gridItem01;
+  }
+  .gridItem02 {
+    grid-area: gridItem02;
+  }
+  .gridItem03 {
+    grid-area: gridItem03;
+  }
+  .gridItem04 {
+    grid-area: gridItem04;
+  }
+  .gridItem05 {
+    grid-area: gridItem05;
+  }
+  .gridItem06 {
+    grid-area: gridItem06;
+  }
+  .gridItem07 {
+    grid-area: gridItem07;
+  }
+}
+.l-footer__navLink {
+  text-decoration: none;
+  font-size: calc(14 / 16 * 1rem);
+  color: #fff;
+}
+@media screen and (min-width: 769px) {
+  .l-footer__navLink {
+    font-size: calc(16 / 16 * 1rem);
+  }
+}
+
+.l-footer__copyright {
+  margin-top: 36px;
+  text-align: center;
+  font-size: calc(12 / 16 * 1rem);
+  color: #444;
+}
+
+.breadcrumbs {
+  padding: 60px 40px 0;
+  display: flex;
+  justify-content: center;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  align-items: center;
+  font-size: calc(14 / 16 * 1rem);
+}
+.breadcrumbs :where(*) {
+  color: #444;
+  text-decoration: none;
+}
+@media screen and (min-width: 769px) {
+  .breadcrumbs {
+    padding: 96px 80px 0;
+  }
+}
+
+.m-breadcrumb__arrow {
+  background-image: url("../../common/img/icon_common_14.svg");
+  width: 9px;
+  height: 7px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .m-shop {
