--- a/src/dev/styles/common/_mv.scss
+++ b/src/dev/styles/common/_mv.scss
@@ -6,18 +6,21 @@
 
 .m-mv {
     position: relative;
-    z-index: 1000;
+    z-index: 100;
     max-width: 916px;
     margin-inline: auto;
     box-sizing: content-box;
+    width: calc(100% - 70px - 40px - 100px);
+
+    @include mixin.media(pc){
+        width: calc(100% - 125px - 56px - 220px);
+    }
 }
 
 .m-mv__inner {
     margin-inline: auto;
-    // width: calc(100% - 70px - 40px);
 
     @include mixin.media(pc){
-        // width: calc(100% - 125px - 56px);
         font-size: mixin.rem(16);
 
         &::before{
@@ -27,10 +30,10 @@
 }
 
 .m-mv__heading {
-    padding: 60px 124px 0;
+    padding: 60px 0 0;
     
     @include mixin.media(pc){
-        padding: 80px 220px 0;
+        padding: 80px 0 0;
     }
 
 }
@@ -45,7 +48,7 @@
     font-size: mixin.rem(24);
     
     @include mixin.media(pc){
-        font-size: mixin.rem(36);        
+        font-size: mixin.rem(36);
     }
 }
 
@@ -55,7 +58,8 @@
 }
 
 .m-mv__text {
-    margin-top: 64px;
+    margin: 64px calc(50% - 50vw) 0;
+    width: 100vw;
     text-align: center;
     padding: 0 40px;
     
